--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,27 +1,28 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Program Committees}
+\cvsection{Skills}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvhonors}
+\begin{cvskills}
 
 %---------------------------------------------------------
-  \cvhonor
-    {Problem Writer} % Position
-    {2016 CODEGATE Hacking Competition World Final} % Committee
-    {S.Korea} % Location
-    {2016} % Date(s)
+  \cvskill
+    {Languages:} % Category
+    {C/C++, C\#, Java, Python, Html, Javascript, IOS, R, LaTex, Matlab, Prolog, SML} % Skills
 
 %---------------------------------------------------------
-  \cvhonor
-    {Organizer \& Co-director} % Position
-    {1st POSTECH Hackathon} % Committee
-    {S.Korea} % Location
-    {2013} % Date(s)
+  \cvskill
+    {Libraries:} % Category
+    {Tensorflow, CUDA, Eigen, OpenGL, ASP.NET} % Skills
 
 %---------------------------------------------------------
-\end{cvhonors}
+  \cvskill
+    {Other Skills:} % Category
+    {Git, Windows, Linux, Bash Scripting, Agile} % Skills
+
+%---------------------------------------------------------
+\end{cvskills}
