--- a/resume/education.tex
+++ b/resume/education.tex
@@ -4,21 +4,21 @@
     {Master of Science in Computer Science}
     {Old Dominion University}
     {Norfolk, Virginia}
-    {Jun. 2017 - Present}
+    {June 2018}
     {
       \begin{cvitems}
         \item {Awarded the outstanding research and creativity grant in addition to a full tuition scholarship.}
-        \item {Graduating Jun. 2018}
+        \item {\textbf{3.75 GPA}}
       \end{cvitems}
     }
     \cventryx
     {Bachelor of Science in Computer Science}
     {Old Dominion University}
     {Norfolk, Virginia}
-    {Aug. 2013 - May 2017}
+    {May 2017}
     {
       \begin{cvitems}
-        \item {Received a full tuition scholarship and graduated with a 3.6 GPA from the honors college.}
+        \item {Received a full tuition scholarship and graduated with a \textbf{3.6 GPA} from the honors college.}
       \end{cvitems}
     }
 \end{cventries}
