--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,10 +9,10 @@
       \begin{cvitems}
         \item {Developed a deep convolutional neural network used to label pixels in a 3D biological
 image.}
-        \item {Developed a heuristic algorithm (\textbf{C}) to match secondary structures from a 3D protein
+        \item {Constructed a heuristic algorithm (\textbf{C}) to match secondary structures from a 3D protein
 image and a 2D protein sequence.}
         \item {Improved the runtime of a serial algorithm by using parallel computing (\textbf{CUDA}).}
-        \item {Developed an interactive extension (\textbf{Python}) for an imaging software that displayed the results of a \textbf{C++} executable.}
+        \item {Developed an interactive extension (\textbf{Python}) for an imaging application that displayed the results of a C++ executable.}
       \end{cvitems}
     }
   \cventry
@@ -22,7 +22,7 @@ image and a 2D protein sequence.}
     {}
     {
       \begin{cvitems}
-        \item {Taught lectures, developed assignments, and graded exams for a mid-level \textbf{C++} course.}
+        \item {Taught lectures, developed assignments, and graded exams for Problem Solving and Programming II}
       \end{cvitems}
     }
 \end{cventries}
