--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -1,4 +1,4 @@
-\cvsection{Side Projects}
+\cvsection{Projects}
 \begin{cventries}
   \cventryy
     {}
@@ -7,7 +7,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Using a Restricted Boltzmann Machine and Gibbs Sampling, a chord is generated in the style of training music.}
+        \item {Created a Restricted Boltzmann Machine that generates a chord in the style of training music}
+        \item {Used Google's \textbf{TensorFlow} library and Gibbs Sampling to ensure that chords are constructed with randomness}
       \end{cvitems}
     }
   \cventryy
@@ -17,7 +18,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Using a special type of recurrent neural network, a LTSM network is used to recognize a spoken digit from one to ten.}
+        \item {Created a recurrent neural network with \textbf{TensorFlow}, in order to recognize a spoken digit from one to ten.}
+        \item {Utilized a Long short-term memory network to capture dependencies between items in a spoken word}
       \end{cvitems}
     }
   \cventryy
@@ -27,7 +29,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Inspired by recent cryptocurrency projects, a proof of work model is replicated to simulate a new currency.}
+        \item {Used \textbf{C\#} to construct a BlockChain that allows users to make changes to a shared P2P ledger}
+        \item {Implemented a Proof of Work model so that changes to the ledger are secure and verified by the P2P network}
       \end{cvitems}
     }
 
