--- a/resume/presentation.tex
+++ b/resume/presentation.tex
@@ -11,7 +11,7 @@
           \end{cvitems}
     }
 \end{cventries}
-\vspace{-3mm}
+\vspace{-8mm}
 \begin{cventries}
   \cventrya
     {}
@@ -24,7 +24,7 @@
           \end{cvitems}
     }
 \end{cventries}
-\vspace{-3mm}
+\vspace{-8mm}
 \begin{cventries}
   \cventrya
     {}
@@ -37,16 +37,16 @@
           \end{cvitems}
     }
 \end{cventries}
-\vspace{-3mm}
+\vspace{-8mm}
 \begin{cventries}
   \cventrya
     {}
-    {NASA Research Center: Machine Learning Technologies and their Applications}
+    {NASA Research Center: Machine Learning Technologies and their Application}
     {Norfolk, Virginia}
-    {Aug. 2016}
+    {Apr. 2016}
     {
         \begin{cvitems}
-            \item {Attended each day of the conference}
+            \item {Attended all days of conference}
           \end{cvitems}
     }
 \end{cventries}
