--- a/resume/writing.tex
+++ b/resume/writing.tex
@@ -6,6 +6,19 @@
     {}
     {}
     {
-    Haslam, D., Zubair, M., Ranjan, D., Biswas, A., and He, J., Challenges in Matching Secondary Structures in Cryo-EM: An Exploration. IEEE BIBM 2016 Workshop: Computational Structural Bioinformatics Workshop. Shenzhen, China, 15-18 December 2016.
+    \begin{cvitems}
+    \item{Haslam, D., Zubair, M., Ranjan, D., Biswas, A., and He, J., \textbf{Challenges in Matching Secondary Structures in Cryo-EM: An Exploration}. IEEE BIBM 2016 Workshop: Computational Structural Bioinformatics Workshop. Shenzhen, China, 15-18 December 2016.}
+    \end{cvitems}
+    }
+    \vspace{5mm}
+    \cventryr
+    {}
+    {}
+    {}
+    {}
+    {
+    \begin{cvitems}
+    \item{Rongjian Li, Dong Si, Devin Haslam, Shuiwang Ji, and Jing He. \textbf{Detection and Evaluation of Protein Secondary Structure Patterns from 3-dimentional Cryo-Electron Microscopy Images using Deep Learning}. Banff, Canada, 19-21 September 2017.}
+    \end{cvitems}
     }
 \end{cventries}
