--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -12,17 +12,17 @@
 %---------------------------------------------------------
   \cvskill
     {Languages:} % Category
-    {C/C++, C\#, Java, Python, Html, Javascript, IOS, R, LaTex, Matlab, Prolog, SML} % Skills
+    {C++, C, C\#, Java, Python, Html, Javascript, IOS, R, LaTex, Matlab, Prolog, SML} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Libraries:} % Category
-    {Tensorflow, CUDA, Eigen, OpenGL, ASP.NET} % Skills
+    {TensorFlow, CUDA, Eigen, OpenGL, ASP.NET} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Other Skills:} % Category
-    {Git, Windows, Linux, Bash Scripting, Agile} % Skills
+    {Git, Windows, Linux, Bash Scripting, P2P} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
