--- a/resume.tex
+++ b/resume.tex
@@ -62,7 +62,7 @@
 \github{github.com/dhasl002}
 \linkedin{linkedin.com/in/devin-haslam}
 %%% Optionals
-\position{Software Engineer{\enskip\cdotp\enskip}Data Analyst}
+\position{Software Engineer}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
