--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -22,7 +22,7 @@ image and a 2D protein sequence.}
     {}
     {
       \begin{cvitems}
-        \item {Taught lectures, developed assignments, and graded exams for Problem Solving and Programming II}
+        \item {Taught lectures, developed assignments, and graded exams for Problem Solving and Programming II.}
       \end{cvitems}
     }
 \end{cventries}
