--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -7,8 +7,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Created a Restricted Boltzmann Machine that generates a chord in the style of training music}
-        \item {Used Google's \textbf{TensorFlow} library and Gibbs Sampling to ensure that chords are constructed with randomness}
+        \item {Created a Restricted Boltzmann Machine that generates a chord in the style of training music.}
+        \item {Used Google's \textbf{TensorFlow} library and Gibbs Sampling to ensure that chords are constructed with randomness.}
       \end{cvitems}
     }
   \cventryy
@@ -19,7 +19,7 @@
     {
       \begin{cvitems}
         \item {Created a recurrent neural network with \textbf{TensorFlow}, in order to recognize a spoken digit from one to ten.}
-        \item {Utilized a Long short-term memory network to capture dependencies between items in a spoken word}
+        \item {Utilized a Long short-term memory network to capture dependencies between items in a spoken word.}
       \end{cvitems}
     }
   \cventryy
@@ -29,8 +29,8 @@
     {}
     {
       \begin{cvitems}
-        \item {Used \textbf{C\#} to construct a BlockChain that allows users to make changes to a shared P2P ledger}
-        \item {Implemented a Proof of Work model so that changes to the ledger are secure and verified by the P2P network}
+        \item {Used \textbf{C\#} to construct a BlockChain that allows users to make changes to a shared P2P ledger.}
+        \item {Implemented a Proof of Work model so that changes to the ledger are secure and verified by the P2P network.}
       \end{cvitems}
     }
 
