--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Languages:} % Category
-    {C++, C, C\#, Java, Python, Html, Javascript, IOS, R, LaTex, Matlab, Prolog, SML} % Skills
+    {C++, C, C\#, Java, Python, Html, SQL, Javascript, IOS, R, LaTex, Matlab, Prolog, SML} % Skills
 
 %---------------------------------------------------------
   \cvskill
